@@ -1,1 +1,3 @@
 Edit Configuation -> add VM Options -> --module-path "C:\Program Files\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml
+mac an lon:
+--module-path /Users/huy/Downloads/GitHub/CNPM/Libraris/openjfx-11.0.2_windows-x64_bin-sdk/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml
